cabal-version:      2.4
name:               modp
version:            0.1.0.0
synopsis:           Modular parser
license:            MIT
author:             Siddharth Bhat
maintainer:         siddu.druid@gmail.com

library
    exposed-modules:  Modp.Lexer
    build-depends:    base ^>=4.16.4.0
                      , containers
                      , mtl
                      , monad-loops
    hs-source-dirs:   .
    default-language: Haskell2010
